Fix scrollbar

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   justify-content: flex-end;
   background: url('/img/background.jpg') no-repeat center center/cover;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -37,7 +37,7 @@ body::-webkit-scrollbar-track {
   flex-grow: 1;
   width: 90%;
   max-width: 1200px;
-  overflow-y: auto;
+  overflow-y: scroll;
   padding: 25px;
   margin-top: 65px;
   margin-bottom: 20px;
